--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "redux": "^5.0.1",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
