--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.0"
