--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_PORT=4001
 
 # VITE_BASE_URL=http://localhost:8080
-VITE_BASE_URL=https://beneficial-laughter-production-f4b0.up.railway.app
+VITE_BASE_URL=https://e-commerce-q6za.onrender.com
