--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_PORT=4001
 
-# VITE_BASE_URL=http://localhost:8080
-VITE_BASE_URL=https://alone-janifer-hello606-8d820657.koyeb.app
+VITE_BASE_URL=http://localhost:8080
+# VITE_BASE_URL=https://alone-janifer-hello606-8d820657.koyeb.app
