--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "swiper": "^11.2.4",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
